<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="menu_title_main">主页</string>
    <string name="menu_title_file">我的文件</string>
    <string name="menu_title_drag_demo">Drag Demo</string>
    <string name="menu_title_search">搜索</string>
    <string name="menu_title_download">我的下载</string>
    <string name="menu_title_upload">上传文件</string>
    <string name="menu_title_logout">退出</string>
    <string name="menu_title_switch_account">切换账号</string>
    <string name="menu_title_switch_user">切换角色</string>


</resources>