<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/user_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@drawable/ic_baseline_folder_24"
            android:title="@string/menu_title_file"
            android:checked="true" />

        <item
            android:id="@+id/download"
            android:icon="@drawable/ic_baseline_download_24"
            android:title="@string/menu_title_download"
            android:checked="false" />

        <item
            android:id="@+id/upload"
            android:icon="@drawable/ic_baseline_cloud_upload_24"
            android:title="@string/menu_title_upload"
            android:checked="false" />

        <item
            android:id="@+id/drag_demo"
            android:icon="@drawable/ic_baseline_games_24"
            android:title="@string/menu_title_drag_demo"
            android:checked="false"
            />
    </group>

    <group
        android:checkableBehavior="none">

        <item
            android:id="@+id/switch_user"
            android:icon="@drawable/ic_baseline_switch_account_24"
            android:title="@string/menu_title_switch_user"
            android:checked="false" />

        <item
            android:icon="@drawable/ic_baseline_menu_24"
            android:title="@string/menu_title_switch_account"
            android:checked="false" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_title_logout"
            android:checked="false"
            />
    </group>
</menu>